--- a/cadastro.style.css
+++ b/cadastro.style.css
@@ -6,8 +6,6 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    width: 100vw;
-    height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -18,40 +16,44 @@ body{
     min-height: 100vh;
     background-color: #305345;
 }
-.text-box{
-    width: 20rem;
+form{
+    height: 90%;
+}
+.w50{
+    width: 30%;
     float:left;
-    padding-right: 3rem;
+    margin-top: 50px;
 }
 .w51{
-    width: 11rem;
+    width: 15%;
     float:left;
-    padding-right: 1rem;
-    
+    margin-right: -10px;
+    margin-top: 50px;
 } 
 .w52{
-    width:10rem;
-    float: left;
-    padding-right: -18rem;
-    margin-right: -1rem;
+    width:11%;
+    float:left;
+    margin-top: 15px;
 }  
+.w53{
+  width: 11%;
+  float: left;
+  margin-top: 15px;
+}
    
 .box{
     display: flex;
-    width: 100%;
+    width: 95%;
     height: 100%;
     box-sizing: border-box;
-}
-form{
-    width: 100%;
-}
 
+}
 .form-box{
     background-color: rgba(244, 248, 244, 0.911);
     backdrop-filter: blur(65px);
     padding: 30px 30px;
     width: 100%;
-    height: auto;  
+    height: 70vh;    
 }
 .form-box h2{
     font-size: 25px;
@@ -73,23 +75,19 @@ form{
     display: block;
 }
 form .input-group{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     margin-top: 15px;
-}
-.form-box .text-box{
-    margin-bottom: 20px;
-    margin-top: 15px;
+    padding: 10px;
 }
 form .input-group label{
-    margin-left: 3px;
     color: #0f0f0f;
     font-weight: bold;
-    display: block;
+    display: flex;
     margin-bottom: 1px;
 }
-form .input-group  .text-box input {
+form .input-group input {
     width:100%;
-    height: 18px;
+    height: 10px;
     background-color: rgba(250, 241, 241, 0.603);
     border-radius: 15px;
     outline: none;
@@ -104,7 +102,7 @@ form .input-group input:focus{
     border-color: #0e0b0c69;
 }
 form .input-group button{
-    width: 50%;
+    width: 13%;
     height: 40px;
     background: #0fdf7e;
     border-radius: 20px;
@@ -116,7 +114,8 @@ form .input-group button{
     box-shadow: 0px 10px 40px -12px #e3e6e4f8;
     font-weight: 800;
     letter-spacing: 3px;
-    margin-left: 600px; 
+    margin-left: 310px; 
+    margin-top: 200px;
 }
 form .input-group input.checkbox{
     width: 28px;
@@ -126,9 +125,9 @@ form .input-group input.checkbox{
 }
 .input-group select{
     width: 78%;
-    height: 4.5vh;
-    border-radius: 15px;
-    list-style: none;
+    height: 33px;
+    border-radius: 10px;
+    list-style: none;  
 }
 @media only screen and (max-width:600px){
     body{
@@ -142,9 +141,6 @@ form .input-group input.checkbox{
     .form-box{
         width: 100%;
         height: 100%;
-    }
-    .text-box{
-        flex-direction: column;
     }
     .w50{
         margin-left: 60px;
@@ -162,8 +158,47 @@ form .input-group input.checkbox{
         float: left;
         flex-direction: column;
     }
+    .w53{
+        width: 70%;
+        margin-left: 60px;
+        float: left;
+        flex-direction: column;
+    }
     form .input-group button{
-        margin-left: 65px;
-    
+        margin-left: 130px;
+        width: 30%;
+        margin-top: 15px;
+    }
+}
+@media only screen and (max-width:1500px){
+    body{
+        width: 1500px;
+        height: auto;
+    }
+    .box{
+        width: 100%;
+        height: 100%;
+    }
+    .form-box{
+        width: 100%;
+        height: 100%;
+    }
+    .w50{
+        
+        width: 270px;
+    }
+    .w51{
+        width: 200px; 
+    }
+    .w52{
+        width: 200px;  
+    }
+    .w53{
+        width: 180px; 
+    }
+    form .input-group button{
+        margin-left: 800px;
+        width: 15%;
+        margin-top: 50px;
     }
 }
