--- a/payment.style.css
+++ b/payment.style.css
@@ -1,24 +1,31 @@
 body{
-    width: 100vw;
-    height: 90vh;
+    width: 90vw;
+    height: 80vh;
     box-sizing: border-box;
     align-items: center;
     background-color: #ffffff;
+    margin-left:5%;
+    margin-top: -15px; 
+    border-radius: 10px;
+}
+html{
+    background-color: #305345;
 }
 .container1{
-    width: 100%;
-    height: 100%;
-    padding: 3%;
-    display: flex;
-    align-items: center;
-    justify-items: center;
+    width: 90%;
+    height: 80%;
+    display: flex; 
+    margin-top: 80px;  
+    margin-left: 100px; 
 }
 header{
     align-items: center;
+    margin-top: 100px;
 }
 header >h2 {
     margin-left: 38%;
-    color: rgb(6, 116, 116);   
+    color: rgb(6, 116, 116); 
+    margin-top: 50px;  
 }
 header > h3{
     margin-left: 25%;
@@ -26,44 +33,36 @@ header > h3{
 
 }
 .formRigth{
-    width: 100%;
+    width: 50%;
     height: 100%;
     background-color: #ffffff;;
     border-bottom: 15px, 0, 0, 15px;
-    flex-direction: column;
     align-items: center;
-    
+    margin-left: 100px;
 }
 .formLeft{
-    padding-left: 2%;
-    width: 100%;
+    width: 50%;
     height: 100%;
     color:rgb(6, 116, 116);
     background-color: #ffffff;
     border-radius: 0, 15px, 15px, 0;
+    margin-left: 160px;
 }   
 .formRigth .image{
     width: 300px;
     height: 400px;
-    align-items: center;
     margin-left:20%;
 }
 .imputs{
     padding-left: 50px;
 }
 
-input[type="file"] {
-    display: flex;
-    margin-top: 25px;
-    margin-left: 100px;
-   
-}
-input[type="submit"]{
-    width:45%;
-    padding: 16px 0px;
+.imputs button{
+    width:28%;
+    height: 40px;
     margin: 25px;
     border: none;
-    border-radius: 8px;
+    border-radius: 20px;
     outline: none;
     text-transform: uppercase;
     font-weight: 800;
@@ -72,7 +71,7 @@ input[type="submit"]{
     background:rgb(6, 116, 116);
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px rgb(6, 116, 116);
-    margin-left: 100px;
+    margin-left: 150px;
     
 
 }
@@ -80,31 +79,35 @@ input[type="submit"]{
 @media only screen and (max-Width:600px) {
      body{
         width: 89%;
+        height: auto;
      }
      .container1{
         flex-direction: column;
+        margin-left: -40px;
      }
      header h2{
         margin-left: 80px;
     }
      header h3{
-        margin-left: 20px;
+        margin-left: 5px;
         justify-content: center;
         float: right;
     }
+    .formLeft{
+        width: 50%;
+        height: 50%;
+    }
      .formRigth{
-        height: auto;
-        display: flex;
-        margin-right: 80px;
-     }
-     input[type="submit"]{
-        margin-left:65px;
-     }
-     input[type="file"]{
-        margin-left: 0px;
+        width: 50%;
+       height: 90%;
      }
      .formRigth .image{
-        margin-left: 35px;
+        margin-right: 5px;
+     }
+     .imputs button{
+        width: 100%;
+        height: 40px;
+        margin-left: 50px;
      }
 } 
     
