--- a/cadastro.style.css
+++ b/cadastro.style.css
@@ -46,14 +46,14 @@ form{
     width: 95%;
     height: 100%;
     box-sizing: border-box;
-
 }
 .form-box{
     background-color: rgba(244, 248, 244, 0.911);
     backdrop-filter: blur(65px);
     padding: 30px 30px;
     width: 100%;
-    height: 70vh;    
+    height: 70vh;
+    border-radius: 20px;    
 }
 .form-box h2{
     font-size: 25px;
