--- a/index.style.css
+++ b/index.style.css
@@ -74,13 +74,15 @@ header > h3{
 }
 
 @media only screen and (max-Width:600px) {
-     body{
-        width: 89%;
+     
+    body{
+        width: 450px;
         height: auto;
      }
      .container1{
+        width: 100%;
         flex-direction: column;
-        margin-left: -40px;
+        margin-left: -60px;
      }
      header h2{
         margin-left: 80px;
@@ -99,7 +101,7 @@ header > h3{
        height: 90%;
      }
      .formRigth .image{
-        margin-right: 5px;
+        margin-right: -10px;
      }
      .imputs button{
         width: 100%;
