--- a/index.style.css
+++ b/index.style.css
@@ -22,16 +22,17 @@ header{
     align-items: center;
     margin-top: 100px;
 }
-header >h2 {
+h2 {
     margin-left: 38%;
     color: rgb(6, 116, 116); 
     margin-top: 50px;  
 }
-header > h3{
+ h3{
     margin-left: 25%;
     color: rgb(6, 116, 116);
 
 }
+
 .formRigth{
     width: 50%;
     height: 100%;
@@ -53,6 +54,10 @@ header > h3{
     height: 400px;
     margin-left:20%;
 }
+.formLeft img{
+    width: 350px;
+    height: 350px;
+}
 .imputs{
     padding-left: 50px;
 }
@@ -73,16 +78,60 @@ header > h3{
     margin-left: 130px;
 }
 
-@media only screen and (max-Width:600px) {
+
+@media only screen and (max-Width:1390px) {
+   body{
+    width: 1200px;
+    margin-left: 80px;
+    height: 500px;
+   }
+   .container1{
+    width: 89%;
+    margin-left: 15px;
+   }
+   form .laterls{
+    width: 400px;
+    height: 90%;
+   }
+   .formLeft{
+     width: 400px;
+     margin-left: 15px;
+   }
+   .formRigth{
+    width: 250px;
+    margin-right: 15px;
+   }
+   .formRigth .image{
+    width: 250px;
+    height: 300px;
+   }
+   .formLeft img{
+    width: 380px;
+    height: 500px;
+    margin-left: 20px;
+   }
+   .imputs button{
+    width: 200px;
+    margin-top: 15px;
+    margin-left: 20px;
+ }
+
+   
+} 
+    
+
+@media only screen and (max-Width:500px) {
      
     body{
         width: 450px;
-        height: auto;
+        height: 1500px;
+        margin-left: 15px;
+        margin-top: -50px;
      }
      .container1{
-        width: 100%;
+        width: 50%;
         flex-direction: column;
-        margin-left: -60px;
+
      }
      header h2{
         margin-left: 80px;
@@ -92,21 +141,32 @@ header > h3{
         justify-content: center;
         float: right;
     }
+    
     .formLeft{
         width: 50%;
-        height: 50%;
+        height: 70%;
+        margin-left: 0px;
+    }
+    .texto{
+        margin-left: 10px;
     }
      .formRigth{
         width: 50%;
        height: 90%;
+       margin-left: 30px;
      }
      .formRigth .image{
-        margin-right: -10px;
-     }
-     .imputs button{
-        width: 100%;
-        height: 40px;
         margin-left: 50px;
      }
+     .imputs button{
+        width: 200px;
+        height: 40px;
+        margin-left: 30px;
+     }
+     .formRigth a{
+        margin-left: 80px;
+        
+     }
+     
 } 
     
