--- a/controle.style.css
+++ b/controle.style.css
@@ -2,10 +2,11 @@ table {
     border-collapse: collapse;
     width: 100%;
     display: block;
+    height: 400px;
   }
   
   th, td {
-    text-align: left;
+    text-align: center;
     padding: 8px;
   }
   
