--- a/cadastro.style.css
+++ b/cadastro.style.css
@@ -40,6 +40,10 @@ form{
   float: left;
   margin-top: 15px;
 }
+img{
+    display: none;
+}
+
    
 .box{
     display: flex;
@@ -171,7 +175,7 @@ form .input-group input .checkbox{
 @media only screen and (max-width:500px){
     body{
         margin-top: 5px;
-        width: 450px;
+        width: 390px;
         height: auto;
         margin-left: 10px;
     }
@@ -184,29 +188,29 @@ form .input-group input .checkbox{
         height: 100%;
     }
     .w50{
-        margin-left: 60px;
-        width: 80%;
+        margin-left: 0px;
+        width: 100%;
         flex-direction: column;
     }
     .w51{
-        width: 80%;
-        margin-left: 60px;
+        width: 90%;
+        margin-left: 5px;
         flex-direction: column;
     }
     .w52{
-        width: 70%;
-        margin-left: 60px;
+        width: 90%;
+        margin-left: 5px;
         float: left;
         flex-direction: column;
     }
     .w53{
         width: 70%;
-        margin-left: 60px;
+        margin-left: 30px;
         float: left;
         flex-direction: column;
     }
     form .input-group button{
-        margin-left: 130px;
-        width: 30%;
+        margin-left: 65px;
+        width: 50%;
     }
 }
