--- a/index.style.css
+++ b/index.style.css
@@ -12,11 +12,10 @@ html{
     background-color: #305345;
 }
 .container1{
-    width: 90%;
+    width: 100%;
     height: 80%;
     display: flex; 
-    margin-top: 80px;  
-    margin-left: 100px; 
+    margin-top: 110px;  
 }
 header{
     align-items: center;
@@ -28,41 +27,51 @@ h2 {
     margin-top: 50px;  
 }
  h3{
-    margin-left: 25%;
+    margin-left: 10;
     color: rgb(6, 116, 116);
+    align-items: center;
 
 }
-
+.title  >img{
+    display: none;
+}
+.laterls{
+    width: 68%;
+    height: 100%;
+    margin-left: 85px;
+    margin-top: 180px;
+}
 .formRigth{
-    width: 50%;
+    width: 100%;
     height: 100%;
     background-color: #ffffff;;
     border-bottom: 15px, 0, 0, 15px;
     align-items: center;
-    margin-left: 100px;
+    margin-left: 15px;
+    margin-top: 80px;
 }
 .formLeft{
-    width: 50%;
+    width:100%;
     height: 100%;
     color:rgb(6, 116, 116);
     background-color: #ffffff;
     border-radius: 0, 15px, 15px, 0;
-    margin-left: 160px;
+    margin-left: 100px;
 }   
 .formRigth .image{
-    width: 300px;
+    width: 55%;
     height: 400px;
     margin-left:20%;
 }
 .formLeft img{
-    width: 350px;
-    height: 350px;
+    width: 500px;
+    height: 125%;
 }
 .imputs{
     padding-left: 50px;
 }
 .imputs button{
-    width: 35%;
+    width: 55%;
     height: 35px;
     margin: 25px;
     border: none;
@@ -75,26 +84,36 @@ h2 {
     background:rgb(6, 116, 116);
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px rgb(6, 116, 116);
-    margin-left: 130px;
+    margin-left: 80px;
 }
-
+.formRigth a{
+    margin-left: 100px;
+}
+a{
+    display: none;
+}
 
 @media only screen and (max-Width:1390px) {
    body{
     width: 1200px;
     margin-left: 80px;
     height: 500px;
+    margin-top:20px;
    }
    .container1{
     width: 89%;
     margin-left: 15px;
+    margin-top: 40px;
    }
-   form .laterls{
+   .laterls{
     width: 400px;
-    height: 90%;
+    height: 100%;
+    margin-top: 50px;
+    margin-left: 30px;
    }
    .formLeft{
      width: 400px;
+     height: 100%;
      margin-left: 15px;
    }
    .formRigth{
@@ -123,40 +142,54 @@ h2 {
 @media only screen and (max-Width:500px) {
      
     body{
-        width: 450px;
-        height: 1500px;
-        margin-left: 15px;
-        margin-top: -50px;
+        width: 350px;
+        height: 1400px;
+        margin-left: 30px;
+       margin-top: 0px;
      }
      .container1{
-        width: 50%;
+        width: 95%;
+        height: 1300px;
         flex-direction: column;
-
      }
-     header h2{
-        margin-left: 80px;
+     header > h2{
+        margin-left: 10px;
     }
      header h3{
         margin-left: 5px;
         justify-content: center;
         float: right;
     }
-    
+    .laterls{
+        width: 90%;
+        align-items: center;
+        margin-left: 12px;
+        margin-top:15px;
+    }
     .formLeft{
-        width: 50%;
+        width: 350px;
         height: 70%;
-        margin-left: 0px;
+        margin-left: -15px;
+        margin-top: 20px;
+    }
+    img.image{
+        width: 90%;
+        height: 480px;
+        margin-left: 18px;
     }
     .texto{
         margin-left: 10px;
     }
      .formRigth{
-        width: 50%;
+        width:350px;
        height: 90%;
-       margin-left: 30px;
+       margin-left: -15px;
+       margin-top: 20px;
      }
      .formRigth .image{
-        margin-left: 50px;
+        width: 80%;
+        height: 80%;
+        margin-left: 30px;
      }
      .imputs button{
         width: 200px;
@@ -164,9 +197,8 @@ h2 {
         margin-left: 30px;
      }
      .formRigth a{
-        margin-left: 80px;
+        margin-left: 60px;
         
      }
      
 } 
-    
