--- a/controle.style.css
+++ b/controle.style.css
@@ -1,12 +1,12 @@
 body{
-  width: 50vw;
+  width: 500px;
   height: 60vh;
 }
 table {
     border-collapse: collapse;
     width: 100%;
-    display: block;
-    height: 400px;
+    display: flex;
+    height: 50vh;
   }
   
   th, td {
@@ -19,5 +19,20 @@ table {
   th {
     background-color: #4CAF50;
     color: white;
+  }
+  input[type="file"] {
+    display: flex;
+  }
+  .custom-file-upload {
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    margin-left: 10px;
+  }
+  .file-imput{
+    margin-left: -20px;
   }
   
